--- a/template/index.ejs
+++ b/template/index.ejs
@@ -137,7 +137,41 @@
               <h2>Percorsi</h2>
             </header>
         </div>
-        <article class="row">
+
+        <% categoryObj.forEach(function category(obj) {%>
+            <article class="row">
+              <div class="col-sm-4" tabindex="19">
+               <header  style="background-image:url('/images/<%= obj.image%>')">
+                 <a href="/<%= obj._id %>">
+                   <h3><%= obj.title %></h3>
+                    <div><strong>vedi tutti</strong> i percorsi <strong>family</strong></div>
+                  </a>
+                </header>
+              </div>
+                  <% obj['percorsi'].forEach(function percorsi(objPercorso) {%>
+                    <article class="col-sm-4 percorso" tabindex="20">
+                      <a href="/<%= objPercorso.scheda._idcategory + '/' + objPercorso._id %>">
+                        <h4><%= objPercorso.scheda.title %></h4>
+                          <section>
+                            <div class="row">
+                              <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Valeggio sul Mincio (VR)</div>
+                              <div class="lunghezza col-md-3"><strong>20 Km</strong></div>
+                            </div>
+                              <div class="row dettagli">
+                                <div class="col-md-6">Difficoltà <span class="full"></span><span></span><span></span></div>
+                                <div class="col-md-6">Tempo <strong>1:11:00</strong></div>
+                                <div class="clearfix"></div>
+                                <div class="col-md-6">Pendenza <strong>2%</strong></div>
+                                <div class="col-md-6">Strada <strong>asfalto</strong></div>
+                              </div>
+                            <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
+                        </section>
+                      </a>
+                    </article>
+                  <% });%>
+            </article>
+        <% }); %>
+        <!--<article class="row">
             <div class="col-sm-4" tabindex="19">
              <header>
                <a href="#">
@@ -184,154 +218,8 @@
                 </section>
               </a>
             </article>
-        </article>
+        </article>-->
 
-        <article class="row">
-            <div class="col-sm-4" tabindex="19">
-              <header style="background-image:url('images/sport.jpg')">
-                <a href="#">
-                  <h3>sports</h3>
-                  <div><strong>vedi tutti</strong> i percorsi <strong>sports</strong></div>
-                </a>
-              </header>
-            </div>
-            <article class="col-sm-4 percorso" tabindex="20">
-              <a href="#">
-                <h4>La magia di Valeggio sul mincio</h4>
-                  <section>
-                    <div class="row">
-                      <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Valeggio sul Mincio (VR)</div>
-                      <div class="lunghezza col-md-3"><strong>20 Km</strong></div>
-                    </div>
-                      <div class="row dettagli">
-                        <div class="col-md-6">Difficoltà <span class="full"></span><span></span><span></span></div>
-                        <div class="col-md-6">Tempo <strong>1:11:00</strong></div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-6">Pendenza <strong>2%</strong></div>
-                        <div class="col-md-6">Strada <strong>asfalto</strong></div>
-                      </div>
-                    <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
-                </section>
-              </a>
-            </article>
-            <article class="col-sm-4 percorso">
-              <a href="#">
-                <h4>La magia di Valeggio sul mincio</h4>
-                  <section>
-                    <div class="row">
-                      <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Valeggio sul Mincio (VR)</div>
-                      <div class="lunghezza col-md-3"><strong>20 Km</strong></div>
-                    </div>
-                      <div class="row dettagli">
-                        <div class="col-md-6">Difficoltà <span class="full"></span><span></span><span></span></div>
-                        <div class="col-md-6">Tempo <strong>1:11:00</strong></div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-6">Pendenza <strong>2%</strong></div>
-                        <div class="col-md-6">Strada <strong>asfalto</strong></div>
-                      </div>
-                    <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
-                </section>
-              </a>
-            </article>
-        </article>
-
-        <article class="row">
-            <div class="col-sm-4" tabindex="19">
-              <header style="background-image:url('images/relax.jpg')">
-                <a href="#">
-                  <h3>relax</h3>
-                  <div><strong>vedi tutti</strong> i percorsi <strong>relax</strong></div>
-                </a>
-              </header>
-            </div>
-            <article class="col-sm-4 percorso" tabindex="20">
-              <a href="#">
-                <h4>La magia di Valeggio sul mincio</h4>
-                  <section>
-                    <div class="row">
-                      <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Valeggio sul Mincio (VR)</div>
-                      <div class="lunghezza col-md-3"><strong>20 Km</strong></div>
-                    </div>
-                      <div class="row dettagli">
-                        <div class="col-md-6">Difficoltà <span class="full"></span><span></span><span></span></div>
-                        <div class="col-md-6">Tempo <strong>1:11:00</strong></div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-6">Pendenza <strong>2%</strong></div>
-                        <div class="col-md-6">Strada <strong>asfalto</strong></div>
-                      </div>
-                    <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
-                </section>
-              </a>
-            </article>
-            <article class="col-sm-4 percorso">
-              <a href="#">
-                <h4>La magia di Valeggio sul mincio</h4>
-                  <section>
-                    <div class="row">
-                      <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Valeggio sul Mincio (VR)</div>
-                      <div class="lunghezza col-md-3"><strong>20 Km</strong></div>
-                    </div>
-                      <div class="row dettagli">
-                        <div class="col-md-6">Difficoltà <span class="full"></span><span></span><span></span></div>
-                        <div class="col-md-6">Tempo <strong>1:11:00</strong></div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-6">Pendenza <strong>2%</strong></div>
-                        <div class="col-md-6">Strada <strong>asfalto</strong></div>
-                      </div>
-                    <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
-                </section>
-              </a>
-            </article>
-        </article>
-
-        <article class="row">
-            <div class="col-sm-4" tabindex="19">
-              <header style="background-image:url('images/cittaepaesi.jpg')">
-                <a href="#">
-                  <h3>città e paesi</h3>
-                  <div><strong>vedi tutti</strong> i percorsi <strong>città e paesi</strong></div>
-                </a>
-              </header>
-            </div>
-            <article class="col-sm-4 percorso" tabindex="20">
-              <a href="#">
-                <h4>La magia di Valeggio sul mincio</h4>
-                  <section>
-                    <div class="row">
-                      <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Valeggio sul Mincio (VR)</div>
-                      <div class="lunghezza col-md-3"><strong>20 Km</strong></div>
-                    </div>
-                      <div class="row dettagli">
-                        <div class="col-md-6">Difficoltà <span class="full"></span><span></span><span></span></div>
-                        <div class="col-md-6">Tempo <strong>1:11:00</strong></div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-6">Pendenza <strong>2%</strong></div>
-                        <div class="col-md-6">Strada <strong>asfalto</strong></div>
-                      </div>
-                    <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
-                </section>
-              </a>
-            </article>
-            <article class="col-sm-4 percorso">
-              <a href="#">
-                <h4>La magia di Valeggio sul mincio</h4>
-                  <section>
-                    <div class="row">
-                      <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Valeggio sul Mincio (VR)</div>
-                      <div class="lunghezza col-md-3"><strong>20 Km</strong></div>
-                    </div>
-                      <div class="row dettagli">
-                        <div class="col-md-6">Difficoltà <span class="full"></span><span></span><span></span></div>
-                        <div class="col-md-6">Tempo <strong>1:11:00</strong></div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-6">Pendenza <strong>2%</strong></div>
-                        <div class="col-md-6">Strada <strong>asfalto</strong></div>
-                      </div>
-                    <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
-                </section>
-              </a>
-            </article>
-        </article>
 
         <!-- pubblicità -->
         <aside class="row" id="adv">
