--- a/template/parziale/footer.ejs
+++ b/template/parziale/footer.ejs
@@ -19,13 +19,14 @@
         <div class="row">
             <section class="col-sm-6">
               <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <!--<li><a href="#">Login</a></li>
-                <li><a href="#">Registrati</a></li>-->
+                <li><a href="#">Registrati</a></li>
                 <li><a href="#">Family</a></li>
                 <li><a href="#">Sport</a></li>
                 <li><a href="#">Relax</a></li>
-                <li><a href="#">Città e paesi</a></li>
+                <li><a href="#">Città e paesi</a></li>-->
+                <li><a href="#">Contatti</a></li>
                 <li><a href="#">Private Policy</a></li>
                 <li><a href="#">Help Center</a></li>
               </ul>
