--- a/template/category.ejs
+++ b/template/category.ejs
@@ -1,6 +1,6 @@
 <% include parziale/head %>
 
-    
+
 
         <div class="container-fluid border-red">
           <div class="row">
@@ -14,13 +14,12 @@
         <div class="row">
           <nav class="col-sm-12">
             <ul>
-              <li><a href="">home</a> <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></li>
-              <li><a href="">livello 2</a> <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></li>
-              <li><a href="">livello 3</a></li>
+              <li><a href="/">home</a> <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></li>
+              <li><a href="/<%= percorsiObj[0].title %>"><%= percorsiObj[0].title %></a></li>
             </ul>
           </nav>
           <header class="col-sm-12">
-            <h2>percorsi <strong>Family</strong></h2>
+            <h2>percorsi <strong><%= percorsiObj[0].title %></strong></h2>
           </header>
         </div>
         <section class="row">
@@ -87,23 +86,44 @@
             </section>
 
             <!--categorie -->
+            <% if(categoryObj!= undefined) { %>
             <section id="cat" class="background-red">
               <h4>Categorie</h4>
               <ul>
-                <li><a href="">Family</a></li>
-                <li><a href="">Sports</a></li>
-                <li><a href="">Relax</a></li>
-                <li><a href="">Città e paesi</a></li>
+                <% categoryObj.forEach(function category(objCat) { %>
+                <li><a href="/<%= objCat._id%>"><%= objCat.title%></a></li>
+                <% });%>
               </ul>
             </section>
+            <%  }; %>
           </section>
 
           <!-- cambirrae in col-sm-10 -->
-          <article class="col-sm-9 col-sm-pull-3">
+        <article class="col-sm-9 col-sm-pull-3">
             <div class="row">
+              <% percorsiObj[0]['percorsi'].forEach(function percorsi(obj) {%>
+                <article class="col-sm-6 percorso" data-bambini="<%= obj.scheda.bambini %>" data-lan="<%= obj.coordinates[0][0] %>" data-lon="<%= obj.coordinates[0][1] %>">
+                    <a href="/<%= obj.scheda._idcategory + "/" + obj._id%>">
+                      <h3><%= obj.scheda.title %></h3>
+                        <section>
+                          <div class="row">
+                            <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <%= obj.scheda.txt_start %></div>
+                            <div class="lunghezza col-md-3"><strong><%= obj.scheda.lunghezza %> Km</strong></div>
+                          </div>
+                            <div class="row dettagli">
+                              <div class="col-md-6">Difficoltà <% for (var i=1;i<4;i++) {%><span <% if (i<=obj.scheda.difficolta) {%>class="full"<%}; %>></span><%};%></div>
+                              <div class="col-md-6">Tempo <strong>0:00:00</strong></div>
+                              <div class="clearfix"></div>
+                              <div class="col-md-6">Pendenza <strong><%= obj.scheda.pendenza %>%</strong></div>
+                              <div class="col-md-6">Strada <strong><%= obj.scheda.strada %></strong></div>
+                            </div>
+                          <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
+                      </section>
+                    </a>
+                  </article>
+                <% }); %>
 
-
-              <article class="col-sm-6 percorso">
+            <!--  <article class="col-sm-6 percorso">
                 <a href="#">
                   <h3>La magia di Valeggio sul mincio</h3>
                     <section>
@@ -161,7 +181,7 @@
                 </a>
               </article>
            </div>
-          </article>
+         </article>-->
 
         </section>
       </main>
