--- a/template/category.ejs
+++ b/template/category.ejs
@@ -15,11 +15,11 @@
           <nav class="col-sm-12">
             <ul>
               <li><a href="/">home</a> <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></li>
-              <li><a href="/<%= percorsiObj[0].title %>"><%= percorsiObj[0].title %></a></li>
+              <li><%= percorsiObj[0]['title'] %></li>
             </ul>
           </nav>
           <header class="col-sm-12">
-            <h2>percorsi <strong><%= percorsiObj[0].title %></strong></h2>
+            <h2>percorsi <strong><%= percorsiObj[0]['title'] %></strong></h2>
           </header>
         </div>
         <section class="row">
@@ -91,7 +91,7 @@
               <h4>Categorie</h4>
               <ul>
                 <% categoryObj.forEach(function category(objCat) { %>
-                <li><a href="/<%= objCat._id%>"><%= objCat.title%></a></li>
+                <li><a href="/<%= objCat._id%>"><%= objCat['title']%></a></li>
                 <% });%>
               </ul>
             </section>
@@ -104,84 +104,26 @@
               <% percorsiObj[0]['percorsi'].forEach(function percorsi(obj) {%>
                 <article class="col-sm-6 percorso" data-bambini="<%= obj.scheda.bambini %>" data-lan="<%= obj.coordinates[0][0] %>" data-lon="<%= obj.coordinates[0][1] %>">
                     <a href="/<%= obj.scheda._idcategory + "/" + obj._id%>">
-                      <h3><%= obj.scheda.title %></h3>
+                      <h3><%= obj['scheda']['title'] %></h3>
                         <section>
                           <div class="row">
-                            <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <%= obj.scheda.txt_start %></div>
-                            <div class="lunghezza col-md-3"><strong><%= obj.scheda.lunghezza %> Km</strong></div>
+                            <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <%= obj['scheda']['txt_start'] %></div>
+                            <div class="lunghezza col-md-3"><strong><%= obj['scheda']['lunghezza'] %> Km</strong></div>
                           </div>
                             <div class="row dettagli">
-                              <div class="col-md-6">Difficoltà <% for (var i=1;i<4;i++) {%><span <% if (i<=obj.scheda.difficolta) {%>class="full"<%}; %>></span><%};%></div>
+                              <div class="col-md-6">Difficoltà <% for (var i=1;i<4;i++) {%><span <% if (i<=obj['scheda']['difficolta']) {%>class="full"<%}; %>></span><%};%></div>
                               <div class="col-md-6">Tempo <strong>0:00:00</strong></div>
                               <div class="clearfix"></div>
-                              <div class="col-md-6">Pendenza <strong><%= obj.scheda.pendenza %>%</strong></div>
-                              <div class="col-md-6">Strada <strong><%= obj.scheda.strada %></strong></div>
+                              <div class="col-md-6">Pendenza <strong><%= obj['scheda']['pendenza'] %>%</strong></div>
+                              <div class="col-md-6">Strada <strong><%= obj['scheda']['strada'] %></strong></div>
                             </div>
-                          <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
+                          <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> <%= percorsiObj[0]['title']%></p>
                       </section>
                     </a>
                   </article>
                 <% }); %>
 
-            <!--  <article class="col-sm-6 percorso">
-                <a href="#">
-                  <h3>La magia di Valeggio sul mincio</h3>
-                    <section>
-                      <div class="row">
-                        <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Valeggio sul Mincio (VR)</div>
-                        <div class="lunghezza col-md-3"><strong>20 Km</strong></div>
-                      </div>
-                        <div class="row dettagli">
-                          <div class="col-md-6">Difficoltà <span class="full"></span><span></span><span></span></div>
-                          <div class="col-md-6">Tempo <strong>1:11:00</strong></div>
-                          <div class="clearfix"></div>
-                          <div class="col-md-6">Pendenza <strong>2%</strong></div>
-                          <div class="col-md-6">Strada <strong>asfalto</strong></div>
-                        </div>
-                      <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
-                  </section>
-                </a>
-              </article>
-              <article class="col-sm-6  percorso">
-                <a href="#">
-                  <h3>La magia di Valeggio sul mincio</h3>
-                    <section>
-                      <div class="row">
-                        <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Valeggio sul Mincio (VR)</div>
-                        <div class="lunghezza col-md-3"><strong>20 Km</strong></div>
-                      </div>
-                        <div class="row dettagli">
-                          <div class="col-md-6">Difficoltà <span class="full"></span><span></span><span></span></div>
-                          <div class="col-md-6">Tempo <strong>1:11:00</strong></div>
-                          <div class="clearfix"></div>
-                          <div class="col-md-6">Pendenza <strong>2%</strong></div>
-                          <div class="col-md-6">Strada <strong>asfalto</strong></div>
-                        </div>
-                      <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
-                  </section>
-                </a>
-              </article>
-              <article class="col-sm-6 percorso">
-                <a href="#">
-                  <h3>La magia di Valeggio sul mincio</h3>
-                    <section>
-                      <div class="row">
-                        <div class="col-md-9"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Valeggio sul Mincio (VR)</div>
-                        <div class="lunghezza col-md-3"><strong>20 Km</strong></div>
-                      </div>
-                        <div class="row dettagli">
-                          <div class="col-md-6">Difficoltà <span class="full"></span><span></span><span></span></div>
-                          <div class="col-md-6">Tempo <strong>1:11:00</strong></div>
-                          <div class="clearfix"></div>
-                          <div class="col-md-6">Pendenza <strong>2%</strong></div>
-                          <div class="col-md-6">Strada <strong>asfalto</strong></div>
-                        </div>
-                      <p><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Relax, Città e paesi</p>
-                  </section>
-                </a>
-              </article>
-           </div>
-         </article>-->
+
 
         </section>
       </main>
