piccole correzioni template

--- a/template/percorso.ejs
+++ b/template/percorso.ejs
@@ -44,7 +44,7 @@
         </div>
         <div class="row" id="content">
             <div class="col-sm-9">
-              <p><%= percorsoObj[0]['scheda']['txt'] %></p>
+              <p><%- percorsoObj[0]['scheda']['txt'] %></p>
               <p class="tags"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span><%= percorsoObj[0]['categoria'][0]['title'] %></p>
 
               <div class="row" id="dettagli">
