correzione js + template di home e header

--- a/template/index.ejs
+++ b/template/index.ejs
@@ -5,7 +5,7 @@
         <header class="container"  id="search">
           <div class="row">
             <div class="col-sm-12" id="search-title">
-              <h1>Scopri il Veneto su 2 ruote</h1>
+              <h1>Scopri Verona e provincia su 2 ruote</h1>
             </div>
             <div class="col-sm-12" id="search-field">
               <form method="get" action="/cerca">
