--- a/template/parziale/head.ejs
+++ b/template/parziale/head.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <title><%= title %> Bikeaway - Scopri il veneto su due ruote </title>
+    <title><%= title %> Bikeaway - Scopri Verona e provincia su due ruote </title>
     <!-- inserire meta, favicon, opengraph -->
     <meta charset="utf-8" />
     <meta name="description" content="<%= description %>" />
